--- a/external/Box2D/proj.linux/Makefile
+++ b/external/Box2D/proj.linux/Makefile
@@ -32,6 +32,7 @@ SOURCES = ../Collision/Shapes/b2ChainShape.cpp \
 ../Dynamics/Joints/b2GearJoint.cpp \
 ../Dynamics/Joints/b2Joint.cpp \
 ../Dynamics/Joints/b2MouseJoint.cpp \
+../Dynamics/Joints/b2MotorJoint.cpp \
 ../Dynamics/Joints/b2PrismaticJoint.cpp \
 ../Dynamics/Joints/b2PulleyJoint.cpp \
 ../Dynamics/Joints/b2RevoluteJoint.cpp \
